# fastapi_project_template

./: .env.exemple  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  logs.json  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_04_30_0803-7beb1296cdfe_init.py  2024_05_08_1326-9eb42cbdf6e6_init.py  2024_05_08_1554-90c376a11854_init.py
config/: logger.py  project_config.py
config/database/: db_helper.py
docker/: Dockerfile
src/api_v1/: routes.py
src/api_v1/config/: auth.py
src/api_v1/controllers/: __init__.py  auth.py  profile.py
src/api_v1/profile/: controllers.py
src/api_v1/repositories/: auth.py  profile.py
src/api_v1/schemas/: auth.py  profile.py
src/api_v1/services/: auth.py  profile.py
src/api_v1/users/: config.py  controllers.py  crud.py  dependencies.py  schemas.py
src/controllers/: base_router.py  routes.py
src/models/: __init__.py  base.py  mixins.py  position.py  profile.py  user.py  user_position.py
src/repositories/: sqlalchemy_repository.py
src/schemas/: base_schemas.py
src/services/: base_services.py
src/tests/: conftest.py
src/tests/api_v1/profile/: test_profiles.py
tests/: conftest.py
