[tool.poetry]
name = "fastapi-project-template"
version = "0.1.0"
description = ""
authors = ["GrinevArtem <artemgrinyov90@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.2"
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}
asyncpg = "^0.29.0"
pydantic-settings = "^2.2.1"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
loguru = "^0.7.2"
pytest = "^8.2.1"
pytest-asyncio = "^0.23.7"
sqlalchemy-utils = "^0.41.2"
configargparse = "^1.7"
yarl = "^1.9.4"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
asyncio_mode="auto"
